cmake_minimum_required(VERSION 3.7)
project(Sirius)

set(STANDARD_FLAGS "-fdiagnostics-show-option -fno-omit-frame-pointer -ggdb")
set(WARNING_FLAGS_CXX "-Wall -Wextra")

set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${STANDARD_FLAGS}")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${STANDARD_FLAGS} ${WARNING_FLAGS_CXX} -std=c++17")

set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -DTAR_RELEASE_FINAL=1 -DTAR_RELEASE=1 -DTAR_DEBUG=0")
set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "${CMAKE_CXX_FLAGS_RELWITHDEBINFO} -DTAR_RELEASE_FINAL=0 -DTAR_RELEASE=1 -DTAR_DEBUG=1")
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DTAR_RELEASE_FINAL=0 -DTAR_RELEASE=0 -DTAR_DEBUG=1")

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/Build-Artifacts)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/Build-Artifacts)

include_directories(${CMAKE_CURRENT_SOURCE_DIR})

add_subdirectory(Game)
add_subdirectory(Server)
add_subdirectory(Tools)